hard-gists/896603/run.log
=== Docker Run Log for 896603 ===
Started at: Mi 29. Okt 18:05:38 CET 2025

[2025-10-29 18:05:38] START: Running container for 896603
[2025-10-29 18:05:38] SUCCESS: Container dc42605f4fa5039b668b58d20b8d01835446c1d07a626cff28588db70ffe133b started for 896603
=== Container logs for 896603 ===
  File "/snippet.py", line 26
    print fname
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 896603 ===
[2025-10-29 18:05:40] INFO: Container dc42605f4fa5039b668b58d20b8d01835446c1d07a626cff28588db70ffe133b has stopped
